--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -88,6 +88,9 @@
   .btn {
     @apply bg-blue-600 text-white py-1 rounded-md hover:bg-blue-700 transition ease-in-out;
   }
+  .link{ 
+    @apply hover:text-blue-600 hover:underline transition ease-in-out;
+  }
   @keyframes gradient {
     0% {
       background-position: 0% 50%;
