--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -71,8 +71,10 @@
   }
 
   .nav-elm {
-    @apply px-6 py-2 transition ease-in-out cursor-pointer hover:bg-blue-200 rounded-md;
+    @apply flex items-center px-6 py-2 transition ease-in-out cursor-pointer hover:bg-blue-200 rounded-md;
+
     flex-shrink: 0;
+
   }
   /* .nav-elm img {
     width: 32px; 
